diesel_compile_tests/tests/ui/as_changeset_bad_primary_key_syntax.stderr
error: Expected `bar` found `bar = "baz"`
  --> $DIR/as_changeset_bad_primary_key_syntax.rs:11:10
   |
11 | #[derive(AsChangeset)]
   |          ^^^^^^^^^^^

error: Expected `qux` found `qux ( id )`
  --> $DIR/as_changeset_bad_primary_key_syntax.rs:11:10
   |
11 | #[derive(AsChangeset)]
   |          ^^^^^^^^^^^

error: aborting due to 2 previous errors

