diesel_compile_tests/tests/ui/as_changeset_bad_primary_key_syntax.rs
#[macro_use]
extern crate diesel;

table! {
    users {
        id -> Integer,
        name -> Text,
    }
}

#[derive(AsChangeset)]
#[primary_key(id, bar = "baz", qux(id))]
struct UserForm {
    id: i32,
    name: String,
}

fn main() {}
